// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`displayFloodForecastInfo — 全 18 fixture NO_COLOR snapshot (Task 21 通し) > 16_01_01_220728_VXKO50.xml の NO_COLOR 出力 snapshot 1`] = `
"
┌──────────────────────────────────────────────────────────┐
│  テスト電文                                              │
│ 指定河川洪水予報  発表  [情報]  ○○川上流氾濫注意情報     │
├──────────────────────────────────────────────────────────┤
│   ▸ ○○川 / △△川                                          │
│     【警戒レベル２相当情報［洪水］】○○川上流では、       │
│     氾濫注意水位に到達し、今後、水位はさらに上昇する見込 │
│     み                                                   │
├ ▸ 観測所 ────────────────────────────────────────────────┤
│   ◇ ○○川  L2                                             │
│     ○ ○○○水位観測所 (○○川 (+1)・水位)  ― 欠測            │
│       全時刻欠測                                         │
│       基準水位  L1=142  L2=142.5  L3=144.6  L4=144.9 [m] │
│     ○ △△△水位観測所 (○○川・水位)  L2 ↗                   │
│       現況 46.7↗ │ 1H 46.8→ │ 2H 47→ │ 3H 47.2→          │
│       4H 47.3→ │ 5H 47.8→ │ 6H 47.8→                     │
│       基準水位  L1=45.5  L2=46.5  L3=48  L4=48.6 [m]     │
│   ◇ △△川  ―                                              │
│     ○ □□□水位観測所 (△△川・水位)  ― 欠測                 │
│       全時刻欠測                                         │
│       基準水位  L1=19  L2=20  L3=21.5  L4=23.1 [m]       │
├ ▸ 浸水想定地区 ──────────────────────────────────────────┤
│   ◇ 通常                                                 │
│     ○ ○○県                                               │
│       ○○市 [○○地区・○○地区・○○地区]                      │
│       △△市 [△△地区・△△地区・△△地区]                      │
│       ◇◇市 [◇◇地区・◇◇地区・◇◇地区], □□市                │
├ ▸ 雨量 ──────────────────────────────────────────────────┤
│   ◇ 鬼怒川流域                                           │
│      48時間累積 220 ミリ  /  3時間予測 50 ミリ           │
├──────────────────────────────────────────────────────────┤
│ VXKO50  2019-05-09 20:40:00  気象庁                      │
└──────────────────────────────────────────────────────────┘
"
`;

exports[`displayFloodForecastInfo — 全 18 fixture NO_COLOR snapshot (Task 21 通し) > 16_02_01_220728_VXKO50.xml の NO_COLOR 出力 snapshot 1`] = `
"
╔══════════════════════════════════════════════════════════╗
║  テスト電文                                              ║
║ 指定河川洪水予報  発表  [警告]  ○○川上流氾濫警戒情報     ║
╠══════════════════════════════════════════════════════════╣
║   ▸ ○○川 / △△川                                          ║
║     【警戒レベル３相当情報［洪水］】○○川上流では、今後、 ║
║     氾濫危険水位に到達する見込み                         ║
╠ ▸ 観測所 ════════════════════════════════════════════════╣
║   ◇ ○○川  L2                                             ║
║     ○ ○○○水位観測所 (○○川 (+1)・水位)  L2 ↗              ║
║       現況 143↗ │ 1H 144.8→ │ 2H 145→ │ 3H 144.8→        ║
║       4H 144.9→ │ 5H 145→ │ 6H 145→                      ║
║       基準水位  L1=142  L2=142.5  L3=144.6  L4=144.9 [m] ║
║     ○ △△△水位観測所 (○○川・水位)  L2 ↗                   ║
║       現況 46.6↗ │ 1H 未計算 │ 2H 未計算 │ 3H 未計算     ║
║       4H 未計算 │ 5H 未計算 │ 6H 未計算                  ║
║       基準水位  L1=45.5  L2=46.5  L3=48  L4=48.6 [m]     ║
║   ◇ △△川  L2                                             ║
║     ○ □□□水位観測所 (△△川・水位)  L2 ↗                   ║
║       現況 20.1↗ │ 1H 20.6→ │ 2H 21→ │ 3H 22→ │ 4H 22.2→ ║
║       5H 22.5→ │ 6H 22.5→                                ║
║       基準水位  L1=19  L2=20  L3=21.5  L4=23.1 [m]       ║
╠ ▸ 浸水想定地区 ══════════════════════════════════════════╣
║   ◇ 通常                                                 ║
║     ○ ○○県                                               ║
║       ○○市 [○○地区・○○地区・○○地区]                      ║
║       △△市 [△△地区・△△地区・△△地区]                      ║
║       ◇◇市 [◇◇地区・◇◇地区・◇◇地区], □□市                ║
╠ ▸ 雨量 ══════════════════════════════════════════════════╣
║   ◇ ○○川上流                                             ║
║      6時間累積 0 ミリ  /  3時間予測 0 ミリ               ║
╠══════════════════════════════════════════════════════════╣
║ VXKO50  2019-05-27 09:00:00  気象庁                      ║
╚══════════════════════════════════════════════════════════╝
"
`;

exports[`displayFloodForecastInfo — 全 18 fixture NO_COLOR snapshot (Task 21 通し) > 16_02_02_220728_VXKO50.xml の NO_COLOR 出力 snapshot 1`] = `
"
╔══════════════════════════════════════════════════════════╗
║ 指定河川洪水予報  発表  [警告]  六角川氾濫警戒情報       ║
╠══════════════════════════════════════════════════════════╣
║   ▸ 六角川 / 武雄川                                      ║
║     【警戒レベル３相当情報［洪水］】六角川では、今後、   ║
║     氾濫危険水位に到達する見込み                         ║
╠ ▸ 観測所 ════════════════════════════════════════════════╣
║   ◇ 六角川  L2                                           ║
║     ○ 潮見橋 (六角川・水位)  L2 →                        ║
║       現況 2.53→ │ 1H 3.29→ │ 2H 3.25→ │ 3H 3.08→        ║
║       4H 2.85→ │ 5H 2.54→ │ 6H 2.3→                      ║
║       基準水位  L1=1.5  L2=2.5  L3=2.8  L4=3.1 [m]       ║
╠ ▸ 浸水想定地区 ══════════════════════════════════════════╣
║   ◇ 通常                                                 ║
║     ○ 佐賀県                                             ║
║       武雄市, 嬉野市, 大町町, 江北町, 白石町             ║
╠ ▸ 雨量 ══════════════════════════════════════════════════╣
║   ◇ 六角川流域                                           ║
║      48時間累積 379 ミリ  /  3時間予測 50 ミリ           ║
╠══════════════════════════════════════════════════════════╣
║ VXKO50  2021-08-13 15:10:00  気象庁                      ║
╚══════════════════════════════════════════════════════════╝
"
`;

exports[`displayFloodForecastInfo — 全 18 fixture NO_COLOR snapshot (Task 21 通し) > 16_03_01_220728_VXKO50.xml の NO_COLOR 出力 snapshot 1`] = `
"
╔══════════════════════════════════════════════════════════╗
║  テスト電文                                              ║
║ 指定河川洪水予報  発表  [警告]  ○○川上流氾濫警戒情報     ║
╠══════════════════════════════════════════════════════════╣
║   ▸ ○○川 / △△川                                          ║
║     【警戒レベル３相当情報［洪水］】○○川上流では、今後、 ║
║     氾濫危険流量に到達する見込み                         ║
╠ ▸ 観測所 ════════════════════════════════════════════════╣
║   ◇ ○○川  L2                                             ║
║     ○ ○○○流量観測所 (○○川 (+1)・流量)  L2 ↗              ║
║       現況 143↗ │ 1H 144.8→ │ 2H 145→ │ 3H 144.8→        ║
║       4H 144.9→ │ 5H 144.8→ │ 6H 144.8→                  ║
║       基準水位  L1=142  L2=142.5  L3=144.6               ║
║       L4=144.9 [立方メートル毎秒]                        ║
║     ○ △△△流量観測所 (○○川・流量)  L2 ↗                   ║
║       現況 46.5↗ │ 1H 未計算 │ 2H 未計算 │ 3H 未計算     ║
║       4H 未計算 │ 5H 未計算 │ 6H 未計算                  ║
║       基準水位  L1=45.5  L2=46.5  L3=48                  ║
║       L4=48.6 [立方メートル毎秒]                         ║
║   ◇ △△川  L2                                             ║
║     ○ □□□流量観測所 (△△川・流量)  L2 =                   ║
║       現況 20= │ 1H 20.1→ │ 2H 21→ │ 3H 22→ │ 4H 22.3→   ║
║       5H 22.4→ │ 6H 22.4→                                ║
║       基準水位  L1=19  L2=20  L3=21.5                    ║
║       L4=23.1 [立方メートル毎秒]                         ║
╠ ▸ 浸水想定地区 ══════════════════════════════════════════╣
║   ◇ 通常                                                 ║
║     ○ ○○県                                               ║
║       ○○市 [○○地区・○○地区・○○地区]                      ║
║       △△市 [△△地区・△△地区・△△地区]                      ║
║       ◇◇市 [◇◇地区・◇◇地区・◇◇地区], □□市                ║
╠ ▸ 雨量 ══════════════════════════════════════════════════╣
║   ◇ ○○川上流                                             ║
║      6時間累積 0 ミリ  /  3時間予測 0 ミリ               ║
╠══════════════════════════════════════════════════════════╣
║ VXKO50  2019-05-27 09:00:00  気象庁                      ║
╚══════════════════════════════════════════════════════════╝
"
`;

exports[`displayFloodForecastInfo — 全 18 fixture NO_COLOR snapshot (Task 21 通し) > 16_04_01_220728_VXKO50.xml の NO_COLOR 出力 snapshot 1`] = `
"
╔══════════════════════════════════════════════════════════╗
║  テスト電文                                              ║
║ 指定河川洪水予報  発表  [緊急]                           ║
║   ○○川上流氾濫発生情報（氾濫水の予報）                   ║
╠══════════════════════════════════════════════════════════╣
║   ▸ ○○川 / △△川                                          ║
║     【警戒レベル５相当情報［洪水］】○○川では、氾濫が続く ║
╠ ▸ 氾濫水の予報 ══════════════════════════════════════════╣
║   ◇ ○○川  ○市市役所                                      ║
║      到達 ２時間後頃  /  浸水深 0〜0.5m                  ║
║       最深 05/27 12:00                                   ║
║   ◇ ○○川  ○市郵便局                                      ║
║      到達 ２時間後頃  /  浸水深 0.5〜1m                  ║
║       最深 05/27 12:00                                   ║
║   ◇ ○○川  △市市役所                                      ║
║      到達 ３時間後頃  /  浸水深 1〜2m                    ║
║       最深 05/27 14:00                                   ║
║   ◇ ○○川  △市公民館                                      ║
║      到達 ４時間後頃  /  浸水深 2〜5m                    ║
║       最深 05/27 15:00                                   ║
║   ◇ ○○川  △市消防署                                      ║
║      到達 ６時間後頃  /  浸水深 5〜?m                    ║
║       最深 05/27 18:00                                   ║
╠ ▸ 観測所 ════════════════════════════════════════════════╣
║   ◇ ○○川  L2                                             ║
║     ○ ○○○水位観測所 (○○川 (+1)・水位)  L2 ↗              ║
║       現況 143↗ │ 1H 144.8→ │ 2H 145→ │ 3H 144.8→        ║
║       4H 144.9→ │ 5H 145→ │ 6H 145→                      ║
║       基準水位  L1=142  L2=142.5  L3=144.6  L4=144.9 [m] ║
║     ○ △△△水位観測所 (○○川・水位)  L2 ↗                   ║
║       現況 46.6↗ │ 1H 未計算 │ 2H 未計算 │ 3H 未計算     ║
║       4H 未計算 │ 5H 未計算 │ 6H 未計算                  ║
║       基準水位  L1=45.5  L2=46.5  L3=48  L4=48.6 [m]     ║
║   ◇ △△川  L2                                             ║
║     ○ □□□水位観測所 (△△川・水位)  L2 ↗                   ║
║       現況 20.1↗ │ 1H 20.6→ │ 2H 21→ │ 3H 22→ │ 4H 22.2→ ║
║       5H 22.5→ │ 6H 22.5→                                ║
║       基準水位  L1=19  L2=20  L3=21.5  L4=23.1 [m]       ║
╠ ▸ 浸水想定地区 ══════════════════════════════════════════╣
║   ◇ 氾濫発生情報                                         ║
║     ○ ○○県                                               ║
║       ○○市, △△市, □□市                                   ║
╠ ▸ 雨量 ══════════════════════════════════════════════════╣
║   ◇ ○○川上流                                             ║
║      6時間累積 0 ミリ  /  3時間予測 0 ミリ               ║
╠══════════════════════════════════════════════════════════╣
║ VXKO50  2019-05-27 09:00:00  気象庁                      ║
╚══════════════════════════════════════════════════════════╝
"
`;

exports[`displayFloodForecastInfo — 全 18 fixture NO_COLOR snapshot (Task 21 通し) > 16_05_01_210630_VXKO50.xml の NO_COLOR 出力 snapshot 1`] = `
"
╔══════════════════════════════════════════════════════════╗
║ 指定河川洪水予報  発表  [警告]  ○○川上流氾濫警戒情報     ║
╠══════════════════════════════════════════════════════════╣
║   ▸ ○○川 / △△川                                          ║
║     【警戒レベル３相当情報［洪水］】○○川上流では、今後、 ║
║     氾濫危険水位に到達する見込み                         ║
╠══════════════════════════════════════════════════════════╣
║ VXKO50  2019-05-27 09:00:00  気象庁                      ║
╚══════════════════════════════════════════════════════════╝
"
`;

exports[`displayFloodForecastInfo — 全 18 fixture NO_COLOR snapshot (Task 21 通し) > 16_06_01_220728_VXKO50.xml の NO_COLOR 出力 snapshot 1`] = `
"
╔══════════════════════════════════════════════════════════╗
║  テスト電文                                              ║
║ 指定河川洪水予報  発表  [緊急]  ○○川上流氾濫危険情報     ║
╠══════════════════════════════════════════════════════════╣
║   ▸ ○○川 / △△川                                          ║
║     【警戒レベル４相当情報［洪水］】○○川では、           ║
║     氾濫危険水位に到達し、氾濫のおそれあり               ║
╠ ▸ 観測所 ════════════════════════════════════════════════╣
║   ◇ ○○川  L2                                             ║
║     ○ ○○○水位観測所 (○○川 (+1)・水位)  L2 ↗              ║
║       現況 144.9↗ │ 1H 144.9→ │ 2H 145→ │ 3H 145→        ║
║       基準水位  L1=142  L2=142.5  L3=144.6  L4=144.9 [m] ║
║     ○ △△△水位観測所 (○○川・水位)  L2 ↗                   ║
║       現況 48.1↗ │ 1H 48.3→ │ 2H 48.3→ │ 3H 48.4→        ║
║       基準水位  L1=45.5  L2=46.5  L3=48  L4=48.6 [m]     ║
║   ◇ △△川  L2                                             ║
║     ○ □□□水位観測所 (△△川・水位)  L2 ↗                   ║
║       現況 20.1↗ │ 1H 20.6→ │ 2H 21→ │ 3H 22→            ║
║       基準水位  L1=19  L2=20  L3=21.5  L4=23.1 [m]       ║
╠ ▸ 浸水想定地区 ══════════════════════════════════════════╣
║   ◇ 通常                                                 ║
║     ○ ○○県                                               ║
║       ○○市 [○○地区・○○地区・○○地区]                      ║
║       △△市 [△△地区・△△地区・△△地区]                      ║
║       ◇◇市 [◇◇地区・◇◇地区・◇◇地区], □□市                ║
╠ ▸ 雨量 ══════════════════════════════════════════════════╣
║   ◇ ○○川上流                                             ║
║      6時間累積 0 ミリ  /  3時間予測 0 ミリ               ║
╠══════════════════════════════════════════════════════════╣
║ VXKO50  2019-05-27 09:00:00  気象庁                      ║
╚══════════════════════════════════════════════════════════╝
"
`;

exports[`displayFloodForecastInfo — 全 18 fixture NO_COLOR snapshot (Task 21 通し) > 16_07_01_220728_VXKO50.xml の NO_COLOR 出力 snapshot 1`] = `
"
╔══════════════════════════════════════════════════════════╗
║  テスト電文                                              ║
║ 指定河川洪水予報  発表  [緊急]  ○○川上流氾濫危険情報     ║
╠══════════════════════════════════════════════════════════╣
║   ▸ ○○川 / △△川                                          ║
║     【警戒レベル４相当情報［洪水］】○○川上流では、       ║
║     急激な水位の上昇により、氾濫のおそれあり             ║
╠ ▸ 観測所 ════════════════════════════════════════════════╣
║   ◇ ○○川  L2                                             ║
║     ○ ○○○水位観測所 (○○川 (+1)・水位)  L2 ↗              ║
║       現況 143↗ │ 1H 144.8→ │ 2H 145.2→ │ 3H 145.8→      ║
║       4H 145.1→ │ 5H 145→ │ 6H 145→                      ║
║       基準水位  L1=142  L2=142.5  L3=144.6  L4=144.9 [m] ║
║     ○ △△△水位観測所 (○○川・水位)  L2 ↗                   ║
║       現況 46.6↗ │ 1H 46.8→ │ 2H 46.9→ │ 3H 47.5→        ║
║       4H 48.7→ │ 5H 48.7→ │ 6H 48.6→                     ║
║       基準水位  L1=45.5  L2=46.5  L3=48  L4=48.6 [m]     ║
║   ◇ △△川  L2                                             ║
║     ○ □□□水位観測所 (△△川・水位)  L2 ↗                   ║
║       現況 20.1↗ │ 1H 20.6→ │ 2H 21→ │ 3H 22→ │ 4H 22.2→ ║
║       5H 22.5→ │ 6H 22.5→                                ║
║       基準水位  L1=19  L2=20  L3=21.5  L4=23.1 [m]       ║
╠ ▸ 浸水想定地区 ══════════════════════════════════════════╣
║   ◇ 通常                                                 ║
║     ○ ○○県                                               ║
║       ○○市 [○○地区・○○地区・○○地区]                      ║
║       △△市 [△△地区・△△地区・△△地区]                      ║
║       ◇◇市 [◇◇地区・◇◇地区・◇◇地区], □□市                ║
╠ ▸ 雨量 ══════════════════════════════════════════════════╣
║   ◇ ○○川上流                                             ║
║      6時間累積 0 ミリ  /  3時間予測 0 ミリ               ║
╠══════════════════════════════════════════════════════════╣
║ VXKO50  2019-05-27 09:00:00  気象庁                      ║
╚══════════════════════════════════════════════════════════╝
"
`;

exports[`displayFloodForecastInfo — 全 18 fixture NO_COLOR snapshot (Task 21 通し) > 16_10_01_260312_VXKO50.xml の NO_COLOR 出力 snapshot 1`] = `
"
╔══════════════════════════════════════════════════════════╗
║  テスト電文                                              ║
║ 指定河川洪水予報  発表  [緊急]                           ║
║   緑川水系レベル４氾濫危険警報                           ║
╠══════════════════════════════════════════════════════════╣
║   ▸ 緑川 / 浜戸川 / 加勢川 / 御船川                      ║
║     【警戒レベル４相当情報［洪水］】〔警戒レベル３相当か ║
║     ら４相当に切替〕緑川水系では、                       ║
║     急激な水位の上昇により、氾濫のおそれあり             ║
╠ ▸ 観測所 ════════════════════════════════════════════════╣
║   ◇ 緑川  L4                                             ║
║     ○ 城南 (緑川・水位)  L1 →                            ║
║       現況 3.63→ │ 1H 7.15→ │ 2H 7.89→ │ 3H 7.57→        ║
║       4H 7.04→ │ 5H 6.79→ │ 6H 6.72→                     ║
║       基準水位  L1=3.3  L2=4.3  L3=5.8  L4=6.2 [m]       ║
║     ○ 中甲橋 (緑川・水位)  L4 →                          ║
║       現況 4.62→ │ 1H 5.26→ │ 2H 5.01→ │ 3H 4.34→        ║
║       4H 4.15→ │ 5H 4.14→ │ 6H 4.13→                     ║
║       基準水位  L1=2  L2=3  L3=4.1  L4=4.6 [m]           ║
║   ◇ 御船川  L3                                           ║
║     ○ 御船 (御船川・水位)  L3 →                          ║
║       現況 3.91→ │ 1H 4.34→ │ 2H 4.09→ │ 3H 3.66→        ║
║       4H 3.33→ │ 5H 3.22→ │ 6H 3.25→                     ║
║       基準水位  L1=2  L2=3  L3=3.6  L4=4.3 [m]           ║
║   ◇ 加勢川  L2                                           ║
║     ○ 大六橋 (加勢川・水位)  L2 →                        ║
║       現況 3.67→ │ 1H 4.08→ │ 2H 4.32→ │ 3H 4.42→        ║
║       4H 4.41→ │ 5H 4.37→ │ 6H 4.32→                     ║
║       基準水位  L1=2.5  L2=3.2  L3=3.9  L4=4.4 [m]       ║
╠ ▸ 浸水想定地区 ══════════════════════════════════════════╣
║   ◇ 通常                                                 ║
║     ○ 熊本県                                             ║
║       熊本市 [奥古閑校区・隈庄校区・秋津校区 (+9)]       ║
║       宇土市 [宇土校区・宇土東校区・花園校区 (+3)]       ║
║       宇城市 [松橋校区・不知火校区]                      ║
║       嘉島町 [嘉島西校区・嘉島東校区]                    ║
║       御船町 [御船校区・高木校区・小坂校区]              ║
║       甲佐町 [乙女校区・白旗校区], 熊本市 [杉上校区]     ║
║       御船町 [小坂校区]                                  ║
║       甲佐町 [乙女校区・甲佐校区・白旗校区 (+1)]         ║
║       美里町 [中央校区]                                  ║
║       熊本市 [奥古閑校区・画図校区・御幸校区 (+17)]      ║
║       嘉島町 [嘉島西校区・嘉島東校区]                    ║
║       御船町 [御船校区・高木校区・小坂校区 (+1)]         ║
║       熊本市 [画図校区・御幸校区・秋津校区]              ║
║       嘉島町 [嘉島西校区・嘉島東校区]                    ║
║       御船町 [御船校区・高木校区・小坂校区 (+1)]         ║
╠ ▸ 雨量 ══════════════════════════════════════════════════╣
║   ◇ 緑川上流域                                           ║
║      12時間40分累積 157 ミリ  /  3時間予測 70 ミリ       ║
║   ◇ 緑川中流域                                           ║
║      12時間40分累積 162 ミリ  /  3時間予測 60 ミリ       ║
║   ◇ 加勢川流域                                           ║
║      13時間40分累積 210 ミリ  /  3時間予測 60 ミリ       ║
║   ◇ 御船川流域                                           ║
║      12時間40分累積 200 ミリ  /  3時間予測 60 ミリ       ║
╠══════════════════════════════════════════════════════════╣
║ VXKO50  2025-08-11 02:50:00  気象庁                      ║
╚══════════════════════════════════════════════════════════╝
"
`;

exports[`displayFloodForecastInfo — 全 18 fixture NO_COLOR snapshot (Task 21 通し) > 16_11_01_260312_VXKO50.xml の NO_COLOR 出力 snapshot 1`] = `
"
╔══════════════════════════════════════════════════════════╗
║  テスト電文                                              ║
║ 指定河川洪水予報  発表  [緊急]                           ║
║   最上川中流レベル５氾濫特別警報                         ║
╠══════════════════════════════════════════════════════════╣
║   ▸ 最上川 / 最上小国川 / 丹生川                         ║
║     【警戒レベル５相当情報［洪水］】〔警戒レベル４相当か ║
║     ら５相当に切替〕《氾濫切迫》最上川中流では、         ║
║     氾濫が発生しているおそれ　氾濫のおそれがある区間：最 ║
║     上川古口基準観測所受け持ち区間                       ║
╠ ▸ 観測所 ════════════════════════════════════════════════╣
║   ◇ 最上川  L5                                           ║
║     ○ 大石田 (最上川 (+1)・水位)  L2 →                   ║
║       現況 14.65→ │ 1H 欠測 │ 2H 欠測 │ 3H 欠測          ║
║       4H 欠測 │ 5H 欠測 │ 6H 欠測                        ║
║       基準水位  L1=12.5  L2=13.8  L3=16.5  L4=16.9 [m]   ║
║     ○ 堀内 (最上川 (+1)・水位)  L3 →                     ║
║       現況 7.6→ │ 1H 欠測 │ 2H 欠測 │ 3H 欠測 │ 4H 欠測  ║
║       5H 欠測 │ 6H 欠測                                  ║
║       基準水位  L1=3.4  L2=4.4  L3=7.6  L4=7.8 [m]       ║
║     ○ 古口 (最上川・水位)  L5 →                          ║
║       現況 10.33→ │ 1H 欠測 │ 2H 欠測 │ 3H 欠測          ║
║       4H 欠測 │ 5H 欠測 │ 6H 欠測                        ║
║       基準水位  L1=3.3  L2=5.5  L3=8  L4=8.2 [m]         ║
║   ◇ 最上小国川  L2                                       ║
║     ○ 長者原 (最上小国川・水位)  L2 →                    ║
║       現況 3.17→ │ 1H 欠測 │ 2H 欠測 │ 3H 欠測 │ 4H 欠測 ║
║       5H 欠測 │ 6H 欠測                                  ║
║       基準水位  L1=1.5  L2=2.1  L3=3.3  L4=3.95 [m]      ║
║   ◇ 丹生川  L1                                           ║
║     ○ 岩ヶ袋 (丹生川・水位)  L1 →                        ║
║       現況 2.24→ │ 1H 欠測 │ 2H 欠測 │ 3H 欠測 │ 4H 欠測 ║
║       5H 欠測 │ 6H 欠測                                  ║
║       基準水位  L1=2.1  L2=2.4  L3=2.8  L4=2.9 [m]       ║
╠ ▸ 浸水想定地区 ══════════════════════════════════════════╣
║   ◇ 通常                                                 ║
║     ○ 山形県                                             ║
║       大石田町 [来迎寺・上宿・下宿 (+24)]                ║
║       村山市 [土生田], 大石田町 [豊田・川前・大浦 (+3)]  ║
║       尾花沢市 [名木沢・毒沢]                            ║
║       舟形町 [堀内・瀬脇・実栗屋 (+3)]                   ║
║       大蔵村 [烏川・白須賀・比良稲沢 (+5)]               ║
║       新庄市 [畑・本合海]                                ║
║       戸沢村 [金打坊・津谷・岩花 (+4)]                   ║
║       戸沢村 [古口・上台・猪之鼻 (+10)]                  ║
║       大石田町 [岩ヶ袋・海谷・豊田 (+12)]                ║
║       舟形町 [長者原・富田]                              ║
╠ ▸ 雨量 ══════════════════════════════════════════════════╣
║   ◇ 最上川上・中流域                                     ║
║      48時間累積 161 ミリ  /  3時間予測 1 ミリ            ║
║   ◇ 丹生川流域                                           ║
║      23時間10分累積 146 ミリ  /  3時間予測 1 ミリ        ║
║   ◇ 最上小国川流域                                       ║
║      48時間累積 253 ミリ  /  3時間予測 3 ミリ            ║
╠══════════════════════════════════════════════════════════╣
║ VXKO50  2024-07-26 03:20:00  気象庁                      ║
╚══════════════════════════════════════════════════════════╝
"
`;

exports[`displayFloodForecastInfo — 全 18 fixture NO_COLOR snapshot (Task 21 通し) > 16_11_02_260312_VXKO50.xml の NO_COLOR 出力 snapshot 1`] = `
"
╔══════════════════════════════════════════════════════════╗
║  テスト電文                                              ║
║ 指定河川洪水予報  発表  [緊急]                           ║
║   最上川中流レベル５氾濫特別警報                         ║
╠══════════════════════════════════════════════════════════╣
║   ▸ 最上川 / 最上小国川 / 丹生川                         ║
║     【警戒レベル５相当情報［洪水］】〔継続〕《氾濫発生》 ║
║     最上川中流では、氾濫が発生　氾濫発生箇所：最上川戸沢 ║
║     村蔵岡地区（左岸）                                   ║
╠ ▸ 観測所 ════════════════════════════════════════════════╣
║   ◇ 最上川  L5                                           ║
║     ○ 大石田 (最上川 (+1)・水位)  L2 →                   ║
║       現況 14.65→ │ 1H 欠測 │ 2H 欠測 │ 3H 欠測          ║
║       4H 欠測 │ 5H 欠測 │ 6H 欠測                        ║
║       基準水位  L1=12.5  L2=13.8  L3=16.5  L4=16.9 [m]   ║
║     ○ 堀内 (最上川 (+1)・水位)  L3 →                     ║
║       現況 7.6→ │ 1H 欠測 │ 2H 欠測 │ 3H 欠測 │ 4H 欠測  ║
║       5H 欠測 │ 6H 欠測                                  ║
║       基準水位  L1=3.4  L2=4.4  L3=7.6  L4=7.8 [m]       ║
║     ○ 古口 (最上川・水位)  L5 →                          ║
║       現況 10.33→ │ 1H 欠測 │ 2H 欠測 │ 3H 欠測          ║
║       4H 欠測 │ 5H 欠測 │ 6H 欠測                        ║
║       基準水位  L1=3.3  L2=5.5  L3=8  L4=8.2 [m]         ║
║   ◇ 最上小国川  L2                                       ║
║     ○ 長者原 (最上小国川・水位)  L2 →                    ║
║       現況 3.17→ │ 1H 欠測 │ 2H 欠測 │ 3H 欠測 │ 4H 欠測 ║
║       5H 欠測 │ 6H 欠測                                  ║
║       基準水位  L1=1.5  L2=2.1  L3=3.3  L4=3.95 [m]      ║
║   ◇ 丹生川  L1                                           ║
║     ○ 岩ヶ袋 (丹生川・水位)  L1 →                        ║
║       現況 2.24→ │ 1H 欠測 │ 2H 欠測 │ 3H 欠測 │ 4H 欠測 ║
║       5H 欠測 │ 6H 欠測                                  ║
║       基準水位  L1=2.1  L2=2.4  L3=2.8  L4=2.9 [m]       ║
╠ ▸ 浸水想定地区 ══════════════════════════════════════════╣
║   ◇ 氾濫発生情報                                         ║
║     ○ 山形県                                             ║
║       戸沢村                                             ║
╠ ▸ 雨量 ══════════════════════════════════════════════════╣
║   ◇ 最上川上・中流域                                     ║
║      48時間累積 161 ミリ  /  3時間予測 1 ミリ            ║
║   ◇ 丹生川流域                                           ║
║      23時間10分累積 146 ミリ  /  3時間予測 1 ミリ        ║
║   ◇ 最上小国川流域                                       ║
║      48時間累積 253 ミリ  /  3時間予測 3 ミリ            ║
╠══════════════════════════════════════════════════════════╣
║ VXKO50  2024-07-26 04:20:00  気象庁                      ║
╚══════════════════════════════════════════════════════════╝
"
`;

exports[`displayFloodForecastInfo — 全 18 fixture NO_COLOR snapshot (Task 21 通し) > 16_12_01_260312_VXKO50.xml の NO_COLOR 出力 snapshot 1`] = `
"
╔══════════════════════════════════════════════════════════╗
║  テスト電文                                              ║
║ 指定河川洪水予報  発表  [緊急]                           ║
║   利根川上流部レベル５氾濫特別警報（氾濫水の予報）       ║
╠══════════════════════════════════════════════════════════╣
║   ▸ 利根川 / 早川 / 小山川 / 広瀬川                      ║
║     【警戒レベル５相当情報［洪水］】〔継続〕《氾濫発生》 ║
║     利根川上流部では、越水による氾濫が続く　氾濫発生箇   ║
║     所：利根川坂東大橋（左岸）                           ║
╠ ▸ 氾濫水の予報 ══════════════════════════════════════════╣
║   ◇ 利根川  本庄市                                       ║
║      到達 ３時間後頃  /  浸水深 1.5〜?m                  ║
║       最深 09/18 15:00                                   ║
╠ ▸ 観測所 ════════════════════════════════════════════════╣
║   ◇ 利根川  L5                                           ║
║     ○ 八斗島 (利根川 (+3)・水位)  L5 →                   ║
║       現況 6→ │ 1H 6→ │ 2H 6→ │ 3H 6→ │ 4H 6→ │ 5H 6→    ║
║       6H 6→                                              ║
║       基準水位  L1=0.8  L2=1.9  L3=3.1  L4=4.1 [m]       ║
║     ○ 栗橋 (利根川・水位)  L4 →                          ║
║       現況 10→ │ 1H 10→ │ 2H 10→ │ 3H 10→ │ 4H 10→       ║
║       5H 10→ │ 6H 10→                                    ║
║       基準水位  L1=2.7  L2=5  L3=7.6  L4=9.2 [m]         ║
╠ ▸ 浸水想定地区 ══════════════════════════════════════════╣
║   ◇ 氾濫発生情報                                         ║
║     ○ 茨城県                                             ║
║       古河市, 取手市, 守谷市, 五霞町, 境町               ║
║     ○ 栃木県                                             ║
║       栃木市                                             ║
║     ○ 群馬県                                             ║
║       伊勢崎市, 太田市, 館林市, 玉村町, 板倉町, 明和町   ║
║       千代田町, 大泉町, 邑楽町                           ║
║     ○ 埼玉県                                             ║
║       熊谷市, 行田市, 加須市, 本庄市, 春日部市, 羽生市   ║
║       鴻巣市, 深谷市, 越谷市, 久喜市, 八潮市, 蓮田市     ║
║       幸手市, 吉川市, 宮代町, 杉戸町, 松伏町             ║
║     ○ 千葉県                                             ║
║       野田市                                             ║
╠ ▸ 雨量 ══════════════════════════════════════════════════╣
║   ◇ 利根川上流域                                         ║
║      96時間累積 400 ミリ  /  3時間予測 200 ミリ          ║
╠══════════════════════════════════════════════════════════╣
║ VXKO50  2025-09-18 14:20:00  気象庁                      ║
╚══════════════════════════════════════════════════════════╝
"
`;

exports[`displayFloodForecastInfo — 全 18 fixture NO_COLOR snapshot (Task 21 通し) > 16_14_01_251222_VXKO50.xml の NO_COLOR 出力 snapshot 1`] = `
"
┌──────────────────────────────────────────────────────────┐
│  テスト電文                                              │
│ 指定河川洪水予報  発表  [取消]                           │
│   常呂川レベル２氾濫注意報解除                           │
├──────────────────────────────────────────────────────────┤
│   ▸ 常呂川                                               │
│     〔解除〕常呂川では、氾濫注意水位を下回る             │
├ ▸ 観測所 ────────────────────────────────────────────────┤
│   ◇ 常呂川  L1                                           │
│     ○ 置戸 (常呂川・水位)  L1 →                          │
│       現況 210.98→ │ 1H 210.92→ │ 2H 210.86→             │
│       3H 210.85→ │ 4H 210.86→ │ 5H 210.81→ │ 6H 210.77→  │
│       基準水位  L1=212.6  L2=212.9  L3=213  L4=213.2 [m] │
│     ○ 北見 (常呂川・水位)  L1 →                          │
│       現況 54.7→ │ 1H 54.66→ │ 2H 54.63→ │ 3H 54.59→     │
│       4H 54.56→ │ 5H 54.53→ │ 6H 54.51→                  │
│       基準水位  L1=57.4  L2=58  L3=58.8  L4=59 [m]       │
│     ○ 上川沿 (常呂川・水位)  L1 →                        │
│       現況 6.19→ │ 1H 6.06→ │ 2H 5.95→ │ 3H 5.87→        │
│       4H 5.81→ │ 5H 5.76→ │ 6H 5.72→                     │
│       基準水位  L1=5.3  L2=6.2  L3=7.4  L4=7.6 [m]       │
├ ▸ 浸水想定地区 ──────────────────────────────────────────┤
│   ◇ 通常                                                 │
│     ○ 北海道                                             │
│       訓子府町 [旭町・栄町・字高園 (+15)]                │
│       置戸町 [境野・常盤・川南 (+5)]                     │
│       北見市 [花園町・開盛・錦町 (+14)]                  │
│       北見市 [とん田西町・とん田東町・ひかり野1丁目 (+42 │
│       )]                                                 │
│       北見市 [栄町・開進町・字栄浦 (+16)]                │
├ ▸ 雨量 ──────────────────────────────────────────────────┤
│   ◇ 常呂川流域                                           │
│      36時間50分累積 70 ミリ  /  3時間予測 0 ミリ         │
├──────────────────────────────────────────────────────────┤
│ VXKO50  2025-11-02 15:30:00  気象庁                      │
└──────────────────────────────────────────────────────────┘
"
`;

exports[`displayFloodForecastInfo — 全 18 fixture NO_COLOR snapshot (Task 21 通し) > 91_01_01_241031_VXSU50.xml の NO_COLOR 出力 snapshot 1`] = `
"
┌──────────────────────────────────────────────────────────┐
│ 水位周知河川に関する情報  発表  [情報]                   │
│   善川レベル２氾濫注意報                                 │
├──────────────────────────────────────────────────────────┤
│   【警戒レベル２情報［洪水］】善川では、                 │
│   氾濫注意水位に到達し、洪水の危険度は今後さらに上昇する │
│   見込み                                                 │
│   レベル２氾濫注意報                                     │
├──────────────────────────────────────────────────────────┤
│ VXSU50  2023-07-10 16:30:00  気象庁                      │
└──────────────────────────────────────────────────────────┘
"
`;

exports[`displayFloodForecastInfo — 全 18 fixture NO_COLOR snapshot (Task 21 通し) > synthetic_VXKO50_cancel.xml の NO_COLOR 出力 snapshot 1`] = `
"
┌──────────────────────────────────────────────────────────┐
│ 指定河川洪水予報  取消  [取消]                           │
│   ○○川上流氾濫警戒情報の取消                             │
├──────────────────────────────────────────────────────────┤
│ この洪水予報は取り消されました                           │
├──────────────────────────────────────────────────────────┤
│ VXKO50  2019-05-27 12:00:00  気象庁                      │
└──────────────────────────────────────────────────────────┘
"
`;

exports[`displayFloodForecastInfo — 全 18 fixture NO_COLOR snapshot (Task 21 通し) > synthetic_VXKO50_code31.xml の NO_COLOR 出力 snapshot 1`] = `
"
╔══════════════════════════════════════════════════════════╗
║  テスト電文                                              ║
║ 指定河川洪水予報  発表  [警告]                           ║
║   ○○川上流レベル３氾濫警報（継続）                       ║
╠══════════════════════════════════════════════════════════╣
║   ▸ ○○川                                                 ║
║     【警戒レベル３相当情報［洪水］】○○川上流では、       ║
║     引き続き氾濫危険水位に到達する見込み                 ║
╠ ▸ 観測所 ════════════════════════════════════════════════╣
║   ◇ ○○川  L3                                             ║
║     ○ ○○○水位観測所 (○○川・水位)  L3 ↗                   ║
║       現況 144.8↗                                        ║
║       基準水位  L1=142  L2=142.5  L3=144.6  L4=144.9 [m] ║
╠══════════════════════════════════════════════════════════╣
║ VXKO50  2019-05-27 10:00:00  気象庁                      ║
╚══════════════════════════════════════════════════════════╝
"
`;

exports[`displayFloodForecastInfo — 全 18 fixture NO_COLOR snapshot (Task 21 通し) > synthetic_VXKO50_correction.xml の NO_COLOR 出力 snapshot 1`] = `
"
╔══════════════════════════════════════════════════════════╗
║  テスト電文                                              ║
║  訂正電文                                                ║
║ 指定河川洪水予報  訂正  [警告]  ○○川上流氾濫警戒情報     ║
╠══════════════════════════════════════════════════════════╣
║   ▸ ○○川                                                 ║
║     【警戒レベル３相当情報［洪水］】○○川上流では、今後、 ║
║     氾濫危険水位に到達する見込み                         ║
╠ ▸ 観測所 ════════════════════════════════════════════════╣
║   ◇ ○○川  L2                                             ║
║     ○ ○○○水位観測所 (○○川・水位)  L2 ↗                   ║
║       現況 143↗                                          ║
║       基準水位  L1=142  L2=142.5  L3=144.6  L4=144.9 [m] ║
╠══════════════════════════════════════════════════════════╣
║ VXKO50  2019-05-27 09:30:00  気象庁                      ║
╚══════════════════════════════════════════════════════════╝
"
`;

exports[`displayFloodForecastInfo — 全 18 fixture NO_COLOR snapshot (Task 21 通し) > synthetic_VXSU50_cancel.xml の NO_COLOR 出力 snapshot 1`] = `
"
┌──────────────────────────────────────────────────────────┐
│ 水位周知河川に関する情報  取消  [取消]                   │
│   善川レベル２氾濫注意報の取消                           │
├──────────────────────────────────────────────────────────┤
│ この洪水予報は取り消されました                           │
├──────────────────────────────────────────────────────────┤
│ VXSU50  2023-07-10 19:00:00  気象庁                      │
└──────────────────────────────────────────────────────────┘
"
`;
